<resources>
    <string name="app_name">GroceryApp</string>
    <string name="view_list">VIEW GROCERY LIST</string>
    <string name="share_list">SHARE GROCERY LIST</string>
    <string name="instructions_to_user">This is a Simple Android Grocery App. \n Please input your name!</string>
    <string name="user_name_input">Your Name</string>

    <!-- String resources for recyclerView List item   -->
    <string name="g_item_name">Item Name</string>
    <string name="g_item_quantity">Quantity</string>
    <string name="g_item_total">Total</string>
    <string name="display_user_name">Name: %d</string>
    <string name="grocery_list_intro">Details of Your Grocery Items</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dialog_fire_missiles">Fire some Missiles men!</string>
    <string name="fire">Fire men!</string>
    <string name="cancel">erh change of mind. Dont fire</string>
    <string name="dlg_title">Add Grocery Item</string>
    <string name="display_name">Add grocery item</string>
    <string name="value">Add amount</string>
    <string name="back">Go back</string>
    <string name="toast">A toast to you</string>
    <string name="input_unit_price">Price for 1 item</string>
    <string name="grocery_item_quantity">How many</string>
    <string name="input_item_name">Grocery Item</string>

</resources>
