<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/input_item_name"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:fontFamily="sans-serif-light"
            android:inputType="text"
            android:textColor="@android:color/black"
            android:textColorHighlight="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textColorLink="@android:color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/grocery_item_quantity"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/item_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:fontFamily="sans-serif-light"
            android:inputType="number"
            android:textColor="@android:color/black"
            android:textColorHighlight="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textColorLink="@android:color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/input_unit_price"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/unit_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:fontFamily="sans-serif-light"
            android:inputType="number"
            android:textColor="@android:color/black"
            android:textColorHighlight="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textColorLink="@android:color/black" />
    </LinearLayout>

</LinearLayout>