<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/app_intro"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/user_instructions"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:fontFamily="serif-monospace"
            android:padding="10dp"
            android:text="@string/instructions_to_user"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="normal" />

        <EditText
            android:id="@+id/user_input"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@android:color/white"
            android:fontFamily="sans-serif-light"
            android:hint="@string/user_name_input"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHighlight="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="normal" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/view_grocery_list"
        app:layout_constraintEnd_toEndOf="@+id/app_intro"
        app:layout_constraintStart_toStartOf="@+id/app_intro"
        app:layout_constraintTop_toBottomOf="@+id/app_intro" />

    <Button
        android:id="@+id/view_grocery_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="12dp"
        android:background="@color/colorPrimary"
        android:fontFamily="sans-serif-light"
        android:text="@string/view_list"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/floatingActionButton2"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="createAlertDialog"
        android:tint="@android:color/white"
        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_add" />

</androidx.constraintlayout.widget.ConstraintLayout>